--- a/css/hst.css
+++ b/css/hst.css
@@ -3565,6 +3565,13 @@ svg .donation {
     stroke-linejoin: round;
 }
 
+svg .coffee-mug {
+    fill: none;
+    stroke-width: 1.5;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+}
+
 div.video-thumbnail-mask {
     position: absolute;
     height: 8%;
